--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </li>
 
                 <li>
-                  <a href="#Services"
+                  <a href="#services"
                     ><i class="far fa-building fa-fw"></i> Services</a
                   >
                 </li>
@@ -681,7 +681,7 @@
     <!-- End Our Skills -->
 
     <!-- Start Work Steps -->
-    <div class="work-steps">
+    <div class="work-steps" id="hiw">
       <h2 class="main-title">how it works</h2>
       <div class="container">
         <img src="./Media/work-steps.png" alt="" class="image" />
